MNK-5657 :  Multiple Management Agents test failures * more permgen, less problems
git-svn-id: http://svn.terracotta.org/svn/ehcache@8299 b9324663-ca0f-0410-8574-be9b3887307d